--- a/src/pages/price-list/dishwasher-repair-cost.astro
+++ b/src/pages/price-list/dishwasher-repair-cost.astro
@@ -7,6 +7,7 @@ import Costanchor from "@components/price-list/components_dryer-repair-cost.astr
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
 
 import "css/price/style_price.css";
 
@@ -644,6 +645,381 @@ const title ="Dishwasher Repair Cost - Labor & Parts Pricing - Ultimate Guide";
       </div>
       <Btn />
 
+
+
+
+
+
+
+
+
+
+
+
+
+      <div class="page213-content">
+        <div class="content__page-full-hed">
+          <div class="content__page-hed-h">
+            <h2>Cost to Repair a Dishwasher Depending on the Brand</h2>
+          </div>
+          <div class="content__page-hed-desc"></div>
+        </div>
+
+        <div class="content__page-full-desc">
+          <div class="content__page-desc">
+            <p>
+              The cost to repair a dishwasher can vary significantly depending
+              on the brand, as different manufacturers use different parts and
+              technologies. Here is a general overview of repair costs
+              associated with some popular dishwasher brands:
+            </p>
+
+            <h3>Bosch:</h3>
+            <p>
+              Bosch dishwashers are known for their high quality and
+              reliability, but their parts can be somewhat expensive. A
+              service call for a Bosch dishwasher might start around <b
+                >$100 to $150</b
+              >, with typical repairs ranging from <b>$200 to $400</b>. More
+              complex issues could cost upwards of<b> $600</b>, especially if
+              major components like the motor or control board need replacing.
+            </p>
+          </div>
+
+          <div class="content__page-desc">
+            <h3>Whirlpool:</h3>
+            <p>
+              Whirlpool dishwashers are generally more affordable to repair. A
+              service call typically costs around <b>$75 to $100</b>, with
+              most repairs falling between <b>$150 and $300</b>. Whirlpool
+              parts are relatively easy to find and less expensive, making
+              repairs more cost-effective.
+            </p>
+          </div>
+
+          <div class="content__page-desc">
+            <h3>KitchenAid:</h3>
+            <p>
+              KitchenAid dishwashers, like Bosch, are considered high-end
+              appliances. The initial service call may cost around <b
+                >$100 to $150</b
+              >, with repair expenses typically ranging from <b
+                >$200 to $500</b
+              >. Complex issues involving the control board or motor can push
+              costs higher.
+            </p>
+          </div>
+
+          <div class="content__page-desc">
+            <h3>Samsung:</h3>
+            <p>
+              Repairing a Samsung dishwasher can be moderately priced, with
+              service calls usually costing <b>$100 to $150</b>. Common
+              repairs, such as fixing water inlet valves or replacing door
+              seals, might range from <b>$200 to $400</b>. More significant
+              repairs could be higher, depending on the specific issue.
+            </p>
+          </div>
+
+          <div class="content__page-desc">
+            <h3>LG:</h3>
+            <p>
+              LG dishwashers are known for their advanced features, which can
+              make repairs a bit more costly. A service call for an LG
+              dishwasher generally starts at <b>$100 to $150</b>. Typical
+              repair costs range from <b>$200 to $450</b>, with more complex
+              fixes potentially reaching $600.
+            </p>
+          </div>
+
+          <div class="content__page-desc">
+            <h3>Frigidaire:</h3>
+            <p>
+              Frigidaire dishwashers are often on the lower end of the repair
+              cost spectrum. The initial service call is usually around <b
+                >$75 to $100</b
+              >, with most repairs costing between <b>$150 and $300</b>.
+              Frigidaire parts are generally affordable and readily available.
+            </p>
+          </div>
+
+          <div class="content__page-desc">
+            <h3>GE:</h3>
+            <p>
+              GE dishwashers are mid-range in terms of repair costs. A service
+              call typically costs <b>$75 to $125</b>, and common repairs
+              usually range from <b>$150 to $350</b>. More extensive repairs
+              involving electronic components can be more expensive.
+            </p>
+          </div>
+
+          <div class="content__page-desc">
+            <h3>Maytag:</h3>
+            <p>
+              Maytag dishwashers are known for their durability, but repairs
+              can still be necessary. A service call for a Maytag dishwasher
+              generally costs<b> $75 to $125</b>, with typical repair costs
+              falling between <b>$150 and $350</b>. Complex issues could be
+              more costly.
+            </p>
+          </div>
+
+          <p>
+            In summary, the cost to repair a dishwasher can vary widely by
+            brand. It's essential to consider the age and condition of your
+            appliance when deciding whether to repair or replace it. Regular
+            maintenance and prompt attention to minor issues can help extend
+            the life of your dishwasher and minimize repair costs.
+          </p>
+        </div>
+
+        <div class="content__page-full-logo-brand">
+          <div class="ph-logo-brand">
+            <div class="logo-brand logo-bran-ph-1">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/bosch.webp"
+                  alt="Bosch"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-2">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/whirlpool.webp"
+                  alt="Whirlpool"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-3">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/kitchenAid.webp"
+                  alt="KitchenAid"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-4">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/maytag.webp"
+                  alt="Maytag"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-5">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/samsung.webp"
+                  alt="Samsung"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-6">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/lg.webp"
+                  alt="LG"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-7">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/GE-general-electric.webp"
+                  alt="General Electric"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-8">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/frigidaire.webp"
+                  alt="Frigidaire"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-9">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/miele.webp"
+                  alt="Miele"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-10">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/electrolux.webp"
+                  alt="Electrolux"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-11">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/kenmore.webp"
+                  alt="Kenmore"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-12">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/cove.webp"
+                  alt="cove"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-13">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/thermador.webp"
+                  alt="thermadore"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-14">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/fisher-paykel.webp"
+                  alt="Fisher & Paykel"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+          </div>
+
+          <div class="full-desc-logo-brand">
+            <p>Brands of Dishwasher we repair</p>
+
+            <div class="desc-logo-brand logo-bran-d-1">
+              <h3><a href="#">Bosch</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-2">
+              <h3><a href="#">Whirlpool</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-3">
+              <h3><a href="#">KitchenAid</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-4">
+              <h3><a href="#">Maytag</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-5">
+              <h3><a href="#">Samsung</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-6">
+              <h3><a href="#">LG</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-7">
+              <h3><a href="#">General Electric</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-8">
+              <h3><a href="#">Frigidaire</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-9">
+              <h3><a href="#">Miele</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-10">
+              <h3><a href="#">Electrolux</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-11">
+              <h3><a href="#">Kenmore</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-12">
+              <h3><a href="#">Cove</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-13">
+              <h3><a href="#">Thermador</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-14">
+              <h3><a href="#">Fisher & Paykel</a></h3>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <Btn />
+
+
+
+
+
+
+
+
+
+
+
+      
+
       <div class="maintenance">
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
@@ -1025,3 +1401,4 @@ const title ="Dishwasher Repair Cost - Labor & Parts Pricing - Ultimate Guide";
   </Container>
  
 <Cta />
+<LogoBrands />
