--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -43,7 +43,7 @@ const title ="Contact The Same Day Appliance Repair With Any Issue";
             >
           </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
             <Icon class="text-gray-400 w-4 h-4" name="uil:phone" /><a
-              href="tel:+14243250520">+1 (424) 325-0520-----------</a
+              href="tel:+14243250520">+1 (424) 325-0520</a
             >
           </div>
         </div>
