--- a/src/pages/brands/maytag.astro
+++ b/src/pages/brands/maytag.astro
@@ -41,7 +41,7 @@ const title ="Maytag Repair Los Angeles: Expert Service! (424) 325-0547";
           <p>
             <a class="anchor" href="#anchor-1">Maytag Kitchen Appliances Repair</a>
             |<a class="anchor" href="#anchor-2">Maytag Laundry Appliances Repair</a>
-            |<a class="anchor" href="#feedbackReviews">Reviews----------------</a>
+            |<a class="anchor" href="#feedbackReviews">Reviews</a>
           </p>
         </div>
 
