--- a/src/pages/services/freezer-repair-los-angeles.astro
+++ b/src/pages/services/freezer-repair-los-angeles.astro
@@ -9,6 +9,7 @@ import Arrow from "@components/js/arrow-phone.astro";
 import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
 import ContactForm from "@components/contact-form.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
 
 import "css/service/style_services.css";
 
@@ -117,36 +118,42 @@ const title ="Same Day Freezer Repair Los Angeles - Fast & Reliable";
 
         <div class="list_left">
           <a href="#left-menu-4">
-            <h2>Freezer Parts Explained</h2>
+            <h2>Cost to Repair a Freezer Depending on the Brand</h2>
           </a>
         </div>
 
         <div class="list_left">
           <a href="#left-menu-5">
-            <h2>Symptoms Of Freezer Issues</h2>
+            <h2>Freezer Parts Explained</h2>
           </a>
         </div>
 
         <div class="list_left">
           <a href="#left-menu-6">
-            <h2>What is included in Freezer Maintenance and How it Can Help Preven Repairs</h2>
+            <h2>Symptoms Of Freezer Issues</h2>
           </a>
         </div>
 
         <div class="list_left">
           <a href="#left-menu-7">
-            <h2>How to decide whether to repair or replace a freezer</h2>
+            <h2>What is included in Freezer Maintenance and How it Can Help Preven Repairs</h2>
           </a>
         </div>
 
         <div class="list_left">
           <a href="#left-menu-8">
-            <h2>Same Day Appliance Repair at Your Service</h2>
+            <h2>How to decide whether to repair or replace a freezer</h2>
           </a>
         </div>
 
         <div class="list_left">
           <a href="#left-menu-9">
+            <h2>Same Day Appliance Repair at Your Service</h2>
+          </a>
+        </div>
+
+        <div class="list_left">
+          <a href="#left-menu-10">
             <h2>FAQs</h2>
           </a>
         </div>
@@ -461,7 +468,330 @@ const title ="Same Day Freezer Repair Los Angeles - Fast & Reliable";
           <Btn />
         </div>
 
-        <div class="page213-content" id="left-menu-4">
+        <div class="page213-content"  id="left-menu-4">
+          <div class="content__page-full-hed">
+            <div class="content__page-hed-h">
+              <h2>Cost to Repair a Freezer Depending on the Brand</h2>
+            </div>
+            <div class="content__page-hed-desc"></div>
+          </div>
+    
+          <div class="content__page-full-logo-brand">
+            <div class="ph-logo-brand">
+              <div class="logo-brand logo-bran-ph-1">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/whirlpool.webp"
+                    alt="Whirlpool"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-2">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/frigidaire.webp"
+                    alt="Frigidaire"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-3">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/GE-general-electric.webp"
+                    alt="GE general electric"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-4">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/lg.webp"
+                    alt="LG"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-5">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/maytag.webp"
+                    alt="Maytag"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-6">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/kenmore.webp"
+                    alt="Kenmore"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-7">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/samsung.webp"
+                    alt="Samsung"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-8">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/amana.webp"
+                    alt="Amana"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-9">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/electrolux.webp"
+                    alt="Electrolux"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-10">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/magic-chef.webp"
+                    alt="Magic Chef"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-11">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/danby.webp"
+                    alt="Danby"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-12">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/sub-zero.webp"
+                    alt="Sub Zero"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-13">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/viking.webp"
+                    alt="Viking"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-14">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/fisher-paykel.webp"
+                    alt="Fisher & Paykel"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-15">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/dacor.webp"
+                    alt="Dacor"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-16">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/monogram.webp"
+                    alt="Monogram"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-17">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/galanz.webp"
+                    alt="Galanz"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-18">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/balancing.webp"
+                    alt="Balancing"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-19">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/whynter.webp"
+                    alt="Whynter"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+            </div>
+    
+            <div class="full-desc-logo-brand">
+              <p>Brands of Freezer we repair</p>
+    
+              <div class="desc-logo-brand logo-bran-d-1">
+                <h3><a href="#">Whirlpool</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-2">
+                <h3><a href="#">Frigidaire</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-3">
+                <h3><a href="#">General Electric</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-4">
+                <h3><a href="#">LG Electronics</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-5">
+                <h3><a href="#">Maytag</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-6">
+                <h3><a href="#">Kenmore</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-7">
+                <h3><a href="#">Samsung</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-8">
+                <h3><a href="#">Amana</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-9">
+                <h3><a href="#">Electrolux</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-10">
+                <h3><a href="#">Magic Chef</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-11">
+                <h3><a href="#">Danby</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-12">
+                <h3><a href="#">Sub Zero</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-13">
+                <h3><a href="#">Viking</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-14">
+                <h3><a href="#">Fisher & Paykel</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-15">
+                <h3><a href="#">Dacor</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-16">
+                <h3><a href="#">Monogram</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-17">
+                <h3><a href="#">Galanz</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-18">
+                <h3><a href="#">Balancing</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-19">
+                <h3><a href="#">Whynter</a></h3>
+              </div>
+            </div>
+          </div>
+    
+          <Btn />
+        </div>
+    
+        <div class="page213-content" id="left-menu-5">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>Freezer Parts Explained</h2>
@@ -704,7 +1034,7 @@ const title ="Same Day Freezer Repair Los Angeles - Fast & Reliable";
           <Btn />
         </div>
       
-        <div class="page213-content" id="left-menu-5">
+        <div class="page213-content" id="left-menu-6">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>Symptoms Of Freezer Issues</h2>
@@ -779,7 +1109,7 @@ const title ="Same Day Freezer Repair Los Angeles - Fast & Reliable";
           <Btn />
         </div>
 
-        <div class="page213-content" id="left-menu-6">
+        <div class="page213-content" id="left-menu-7">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>
@@ -976,7 +1306,7 @@ const title ="Same Day Freezer Repair Los Angeles - Fast & Reliable";
           <Btn />
         </div>
 
-        <div class="page213-content" id="left-menu-7">
+        <div class="page213-content" id="left-menu-8">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>How to decide whether to repair or replace a freezer</h2>
@@ -1243,7 +1573,7 @@ const title ="Same Day Freezer Repair Los Angeles - Fast & Reliable";
           <Btn />
         </div>
 
-        <div class="page213-content" id="left-menu-8">
+        <div class="page213-content" id="left-menu-9">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>Same Day Appliance Repair at Your Service</h2>
@@ -1268,7 +1598,7 @@ const title ="Same Day Freezer Repair Los Angeles - Fast & Reliable";
           </div>
         </div>
 
-        <div class="page213-content" id="left-menu-9">
+        <div class="page213-content" id="left-menu-10">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>FAQs</h2>
@@ -1325,5 +1655,6 @@ const title ="Same Day Freezer Repair Los Angeles - Fast & Reliable";
   <Arrow />
   <Focus />
   <Faqs />
+  <LogoBrands />
  
 
