--- a/src/pages/services/dishwasher-repair-los-angeles.astro
+++ b/src/pages/services/dishwasher-repair-los-angeles.astro
@@ -10,6 +10,7 @@ import Arrow from "@components/js/arrow-phone.astro";
 import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
 import ContactForm from "@components/contact-form.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
 
 import "css/service/style_services.css";
 
@@ -126,18 +127,24 @@ const title ="Expert Dishwasher Repair Los Angeles - Fast & Reliable";
 
         <div class="list_left">
           <a href="#left-menu-5">
-            <h2>How to decide whether to repair or replace a dishwasher</h2>
+            <h2>Cost to Repair a Dishwasher Depending on the Brand</h2>
           </a>
         </div>
 
         <div class="list_left">
           <a href="#left-menu-6">
-            <h2>Same Day Appliance Repair at your service</h2>
+            <h2>How to decide whether to repair or replace a dishwasher</h2>
           </a>
         </div>
 
         <div class="list_left">
           <a href="#left-menu-7">
+            <h2>Same Day Appliance Repair at your service</h2>
+          </a>
+        </div>
+
+        <div class="list_left">
+          <a href="#left-menu-8">
             <h2>FAQs</h2>
           </a>
         </div>
@@ -626,6 +633,255 @@ const title ="Expert Dishwasher Repair Los Angeles - Fast & Reliable";
           <Btn />
         </div>
 
+        <div class="page213-content" id="left-menu-5">
+
+          <div class="content__page-full-hed">
+            <div class="content__page-hed-h">
+              <h2>Cost to Repair a Dishwasher Depending on the Brand</h2>
+            </div>
+          </div>
+
+          <div class="content__page-full-logo-brand">
+
+            <div class="ph-logo-brand">
+
+              <div class="logo-brand logo-bran-ph-1">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/bosch.webp"
+                    alt="Bosch"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-2">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/whirlpool.webp"
+                    alt="Whirlpool"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-3">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/kitchenAid.webp"
+                    alt="KitchenAid"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-4">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/maytag.webp"
+                    alt="Maytag"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-5">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/samsung.webp"
+                    alt="Samsung"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-6">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/lg.webp"
+                    alt="LG"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-7">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/GE-general-electric.webp"
+                    alt="General Electric"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-8">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/frigidaire.webp"
+                    alt="Frigidaire"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-9">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/miele.webp"
+                    alt="Miele"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-10">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/electrolux.webp"
+                    alt="Electrolux"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-11">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/kenmore.webp"
+                    alt="Kenmore"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-12">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/cove.webp"
+                    alt="cove"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-13">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/thermador.webp"
+                    alt="thermadore"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+              <div class="logo-brand logo-bran-ph-14">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/fisher-paykel.webp"
+                    alt="Fisher & Paykel"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+
+            </div>
+
+            <div class="full-desc-logo-brand">
+              <p>Brands of Dishwasher we repair</p>
+
+              <div class="desc-logo-brand logo-bran-d-1">
+                <h3><a href="#">Bosch</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-2">
+                <h3><a href="#">Whirlpool</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-3">
+                <h3><a href="#">KitchenAid</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-4">
+                <h3><a href="#">Maytag</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-5">
+                <h3><a href="#">Samsung</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-6">
+                <h3><a href="#">LG</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-7">
+                <h3><a href="#">General Electric</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-8">
+                <h3><a href="#">Frigidaire</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-9">
+                <h3><a href="#">Miele</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-10">
+                <h3><a href="#">Electrolux</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-11">
+                <h3><a href="#">Kenmore</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-12">
+                <h3><a href="#">Cove</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-13">
+                <h3><a href="#">Thermador</a></h3>
+              </div>
+
+              <div class="desc-logo-brand logo-bran-d-14">
+                <h3><a href="#">Fisher & Paykel</a></h3>
+              </div>
+            </div>
+
+          </div>
+
+          
+          <Btn />
+        </div>
+
+
       
         <!-- <div class="page213-content" id="left-menu-10">
           <div class="content__page-full-hed">
@@ -772,7 +1028,7 @@ const title ="Expert Dishwasher Repair Los Angeles - Fast & Reliable";
           <Btn />
         </div> -->
 
-        <div class="page213-content" id="left-menu-5">
+        <div class="page213-content" id="left-menu-6">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>How to decide whether to repair or replace a dishwasher</h2>
@@ -998,7 +1254,7 @@ const title ="Expert Dishwasher Repair Los Angeles - Fast & Reliable";
           <Btn />
         </div>
 
-        <div class="page213-content" id="left-menu-6">
+        <div class="page213-content" id="left-menu-7">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>Same Day Appliance Repair at your service</h2>
@@ -1023,7 +1279,7 @@ const title ="Expert Dishwasher Repair Los Angeles - Fast & Reliable";
           </div>
         </div>
 
-        <div class="page213-content" id="left-menu-7">
+        <div class="page213-content" id="left-menu-8">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>FAQs</h2>
@@ -1465,4 +1721,5 @@ const title ="Expert Dishwasher Repair Los Angeles - Fast & Reliable";
   <Arrow />
   <Focus />
   <Faqs />
+  <LogoBrands />
 
