--- a/src/pages/services/range-repair-los-angeles.astro
+++ b/src/pages/services/range-repair-los-angeles.astro
@@ -9,6 +9,7 @@ import Arrow from "@components/js/arrow-phone.astro";
 import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
 import ContactForm from "@components/contact-form.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
 
 import "css/service/style_services.css";
 
@@ -123,18 +124,24 @@ const title ="Expert Range Repair Los Angeles - Fast & Reliable";
 
         <div class="list_left">
           <a href="#left-menu-5">
-            <h2>How To Decide Whether To Repair Or Replace a Range</h2>
+            <h2>Cost to Repair a Range Depending on the Brand</h2>
           </a>
         </div>
 
         <div class="list_left">
           <a href="#left-menu-6">
-            <h2>Same Day Appliance Repair at Your Service</h2>
+            <h2>How To Decide Whether To Repair Or Replace a Range</h2>
           </a>
         </div>
 
         <div class="list_left">
           <a href="#left-menu-7">
+            <h2>Same Day Appliance Repair at Your Service</h2>
+          </a>
+        </div>
+
+        <div class="list_left">
+          <a href="#left-menu-8">
             <h2>FAQs</h2>
           </a>
         </div>
@@ -553,6 +560,325 @@ const title ="Expert Range Repair Los Angeles - Fast & Reliable";
           <Btn />
         </div>
 
+        <div class="page213-content" id="left-menu-5">
+          <div class="content__page-full-hed">
+            <div class="content__page-hed-h">
+              <h2>Cost to Repair a Range Depending on the Brand</h2>
+            </div>
+            <div class="content__page-hed-desc"></div>
+          </div>
+    
+          <div class="content__page-full-logo-brand">
+            <div class="ph-logo-brand">
+              <div class="logo-brand logo-bran-ph-1">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/GE-general-electric.webp"
+                    alt="General Electric"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-2">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/samsung.webp"
+                    alt="samsung"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-3">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/whirlpool.webp"
+                    alt="Whirlpool"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-4">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/lg.webp"
+                    alt="LG"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-5">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/maytag.webp"
+                    alt="Maytag"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-6">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/frigidaire.webp"
+                    alt="Frigidaire"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-7">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/bosch.webp"
+                    alt="Bosch"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-8">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/kitchenAid.webp"
+                    alt="KitchenAid"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-9">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/amana.webp"
+                    alt="Amana"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-10">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/kenmore.webp"
+                    alt="Kenmore"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-11">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/thermador.webp"
+                    alt="Thermador"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-12">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/electrolux.webp"
+                    alt="Electrolux"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-13">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/viking.webp"
+                    alt="Viking"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-14">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/jennAir.webp"
+                    alt="Jenn-Air"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-15">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/wolf.webp"
+                    alt="Wolf"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-16">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/dacor.webp"
+                    alt="Dacor"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-17">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/hotpoint.webp"
+                    alt="Hotpoint"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-18">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/fisher-paykel.webp"
+                    alt="Fisher & Paykel"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-19">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/sub-zero.webp"
+                    alt="Sub-Zero"
+                  />
+                </a>
+              </div>
+    
+              <div class="logo-brand logo-bran-ph-20">
+                <a href="#">
+                  <img
+                    width="300px"
+                    height="300px"
+                    src="/brand-logos/miele.webp"
+                    alt="Miele"
+                  />
+                </a>
+              </div>
+            </div>
+    
+            <div class="full-desc-logo-brand">
+              <p>Brands of Range we repair</p>
+    
+              <div class="desc-logo-brand logo-bran-d-1">
+                <h3><a href="#">General Electric</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-2">
+                <h3><a href="#">Samsung</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-3">
+                <h3><a href="#">Whirlpool</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-4">
+                <h3><a href="#">LG Electronics</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-5">
+                <h3><a href="#">Maytag</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-6">
+                <h3><a href="#">Frigidaire</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-7">
+                <h3><a href="#">Bosch</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-8">
+                <h3><a href="#">KitchenAid</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-9">
+                <h3><a href="#">Amana</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-10">
+                <h3><a href="#">Kenmore</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-11">
+                <h3><a href="#">Thermador</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-12">
+                <h3><a href="#">Electrolux</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-13">
+                <h3><a href="#">Viking</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-14">
+                <h3><a href="#">Jenn-Air</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-15">
+                <h3><a href="#">Wolf</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-16">
+                <h3><a href="#">Dacor</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-17">
+                <h3><a href="#">Hotpoint</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-18">
+                <h3><a href="#">Fisher & Paykel</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-19">
+                <h3><a href="#">Sub-Zero</a></h3>
+              </div>
+    
+              <div class="desc-logo-brand logo-bran-d-20">
+                <h3><a href="#">Miele</a></h3>
+              </div>
+            </div>
+          </div>
+    
+          <Btn />
+        </div>
+
         
 
         <!-- <div class="page213-content" id="left-menu-10">
@@ -722,7 +1048,7 @@ const title ="Expert Range Repair Los Angeles - Fast & Reliable";
           <Btn />
         </div> -->
 
-        <div class="page213-content" id="left-menu-5">
+        <div class="page213-content" id="left-menu-6">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>How To Decide Whether To Repair Or Replace a Range</h2>
@@ -907,7 +1233,7 @@ const title ="Expert Range Repair Los Angeles - Fast & Reliable";
           <Btn />
         </div>
 
-        <div class="page213-content" id="left-menu-6">
+        <div class="page213-content" id="left-menu-7">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>Same Day Appliance Repair at Your Service</h2>
@@ -932,7 +1258,7 @@ const title ="Expert Range Repair Los Angeles - Fast & Reliable";
           </div>
         </div>
       
-        <div class="page213-content" id="left-menu-7">
+        <div class="page213-content" id="left-menu-8">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>FAQs</h2>
@@ -1593,4 +1919,5 @@ const title ="Expert Range Repair Los Angeles - Fast & Reliable";
 <Arrow />
 <Focus />
 <Faqs />
+<LogoBrands />
 
