--- a/src/pages/services/washing-machine-repair-los-angeles.astro
+++ b/src/pages/services/washing-machine-repair-los-angeles.astro
@@ -8,7 +8,7 @@ import Reviews from "@components/reviews.astro";
 import Arrow from "@components/js/arrow-phone.astro";
 import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
-// import LogoBrands from "@components/js/logo-brands.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
 import ContactForm from "@components/contact-form.astro";
 
 import "css/service/style_services.css";
@@ -122,21 +122,28 @@ const title ="Washing machine Fridge Repair: Expert Service Guaranteed ⭐ Call 
           </a>
         </div>
 
+
         <div class="list_left">
           <a href="#left-menu-5">
-            <h2>How to decide whether to repair or replace a washing machine</h2>
+            <h2>Cost to repair a washing machine depending on the brand</h2>
           </a>
         </div>
 
         <div class="list_left">
           <a href="#left-menu-6">
+            <h2>How to decide whether to repair or replace a washing machine</h2>
+          </a>
+        </div>
+
+        <div class="list_left">
+          <a href="#left-menu-7">
             <h2>Same Day Appliance Repair at your service</h2>
           </a>
         </div>
 
 
         <div class="list_left">
-          <a href="#left-menu-7">
+          <a href="#left-menu-8">
             <h2>FAQs</h2>
           </a>
         </div>
@@ -473,7 +480,7 @@ const title ="Washing machine Fridge Repair: Expert Service Guaranteed ⭐ Call 
           <Btn />
         </div>
         
-        <!-- <div class="page213-content">
+        <div class="page213-content" id="left-menu-5">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>Cost to repair a washing machine depending on the brand</h2>
@@ -481,7 +488,7 @@ const title ="Washing machine Fridge Repair: Expert Service Guaranteed ⭐ Call 
             <div class="content__page-hed-desc"></div>
           </div>
 
-          <div class="content__page-full-desc">
+          <!-- <div class="content__page-full-desc">
             <div class="content__page-desc">
               <h3>Miele:</h3>
               <p>
@@ -576,7 +583,7 @@ const title ="Washing machine Fridge Repair: Expert Service Guaranteed ⭐ Call 
                 machine repairs.
               </p>
             </div>
-          </div>
+          </div> -->
 
           <div class="content__page-full-logo-brand">
             <div class="ph-logo-brand">
@@ -763,7 +770,7 @@ const title ="Washing machine Fridge Repair: Expert Service Guaranteed ⭐ Call 
           </div>
 
           <Btn />
-        </div> -->
+        </div>
        
         <!-- <div class="page213-content" >
           <div class="content__page-full-hed">
@@ -1011,7 +1018,7 @@ const title ="Washing machine Fridge Repair: Expert Service Guaranteed ⭐ Call 
           <Btn />
         </div> -->
 
-        <div class="page213-content" id="left-menu-5">
+        <div class="page213-content" id="left-menu-6">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>
@@ -1130,7 +1137,7 @@ const title ="Washing machine Fridge Repair: Expert Service Guaranteed ⭐ Call 
           <Btn />
         </div>
 
-        <div class="page213-content" id="left-menu-6">
+        <div class="page213-content" id="left-menu-7">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>Same Day Appliance Repair at your service</h2>
@@ -1158,7 +1165,7 @@ const title ="Washing machine Fridge Repair: Expert Service Guaranteed ⭐ Call 
           </div>
         </div>
 
-        <div class="page213-content" id="left-menu-7">
+        <div class="page213-content" id="left-menu-8">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>FAQs</h2>
@@ -2780,5 +2787,4 @@ const title ="Washing machine Fridge Repair: Expert Service Guaranteed ⭐ Call 
   <Arrow />
   <Focus />
   <Faqs />
- 
-<!-- <LogoBrands /> -->
+<LogoBrands />
